--- a/src/components/KToast/index.scss
+++ b/src/components/KToast/index.scss
@@ -1,18 +1,17 @@
-@notificationPrefixCls: rc-notification;
-* {
-    color: red;
-}
-.@{notificationPrefixCls} {
+$notificationPrefixCls: rc-notification;
+
+.#{$notificationPrefixCls} {
   position: fixed;
   z-index: 1000;
+  bottom: 20%;
+  left: 50%;
 
   &-notice {
-    padding: 7px 20px 7px 10px;
-    border-radius: 3px 3px;
-    border: 1px solid #999;;
+    padding: 7px 20px;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    border: 0px solid rgba(0, 0, 0, 0);;
-    background: #fff;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, .6);
     display: block;
     width: auto;
     line-height: 1.5;
@@ -50,7 +49,7 @@
     }
   }
 
-  .fade-effect() {
+  @mixin fade-effect() {
     animation-duration: 0.3s;
     animation-fill-mode: both;
     animation-timing-function: cubic-bezier(0.55, 0, 0.55, 0.2);
@@ -59,22 +58,22 @@
   &-fade-appear,
   &-fade-enter {
     opacity: 0;
-    .fade-effect();
+    @include fade-effect();
     animation-play-state: paused;
   }
 
   &-fade-leave {
-    .fade-effect();
+    @include fade-effect();
     animation-play-state: paused;
   }
 
-  &-fade-appear&-fade-appear-active,
-  &-fade-enter&-fade-enter-active {
+  &-fade-appear#{&}-fade-appear-active,
+  &-fade-enter#{&}-fade-enter-active {
     animation-name: rcNotificationFadeIn;
     animation-play-state: running;
   }
 
-  &-fade-leave&-fade-leave-active {
+  &-fade-leave#{&}-fade-leave-active {
     animation-name: rcDialogFadeOut;
     animation-play-state: running;
   }
