--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 html {
   min-height: 100vh;
   background: url('./assets/images/bg_fish.png'), linear-gradient(to bottom, transparent, #d4ecff);
