update: bill account style

--- a/src/components/KPopover/style.scss
+++ b/src/components/KPopover/style.scss
@@ -11,25 +11,33 @@
     position: fixed;
     top: 0;
     left: 0;
+    margin: -2px;
+    padding: 2px;
     transform: translate(-50%, 20px);
     transform-origin: center -20px;
     opacity: 1;
     transition: all 0.3s;
+    background-color: #ffffff;
+    border-radius: 16px;
     .k-popover-content__wrapper {
         display: block;
-        position: absolute;
-        top: -2px;
-        right: -2px;
-        bottom: -2px;
-        left: -2px;
-        border-radius: 16px;
-        background-color: #ffffff;
-        pointer-events: none;
-    }
-    .k-popover-content__inner {
-        position: relative;
+        // margin: -2px;
+        // padding: 2px;
+        // position: absolute;
+        // top: -2px;
+        // right: -2px;
+        // bottom: -2px;
+        // left: -2px;
         border: 2px solid #333333;
         border-radius: 16px;
+        // background-color: #ffffff;
+        // pointer-events: none;
+    }
+    .k-popover-content__inner {
+        z-index: 999;
+        position: relative;
+        // border: 2px solid #333333;
+        // border-radius: 16px;
         min-width: 80px;
         min-height: 40px;
     }
@@ -80,6 +88,20 @@
             top: 50%;
             right: -2px;
             transform: rotateZ(180deg) translate(-100%, 50%);
+        }
+    }
+    &.placement-right {
+        transform: translate(0, -50%);
+        transform-origin: -20px center;
+        &.is-hidden {
+            opacity: 0;
+            transform: translate(0, -50%) scale(0.2);
+            pointer-events: none;
+        }
+        .k-popover-content-arrow {
+            left: 0;
+            top: 50%;
+            transform: rotateZ(0deg) translate(-100%, -50%);
         }
     }
 }
